objects/Protected_Documents__c.object
<CustomObject>
    <description>R7A  - CHannel Authorization for protected Documents to be attached to the Authorization Documents.</description>
    <fields>
        <fullName>Channel_Partner_Authorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R7A - Channel Authorization</description>
        <label>Channel Partner Authorization</label>
        <referenceTo>Channel_Partner_Authorization__c</referenceTo>
        <relationshipLabel>Protected Documents</relationshipLabel>
        <relationshipName>Protected_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>R7A - Channel Authorization Download Documents security</description>
        <inlineHelpText>Please give a description for all who have access to the record and attached Documents.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>File_Description__c</fullName>
        <description>R7A description of uploaded File</description>
        <label>File Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>R7A - Channel Authorization Migration</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Protected Document</label>
    <nameField>
        <label>Protected Documents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Protected Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>